--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <!-- Abre Intro -->
   <section class="intro">
     <div class="container">
-      <h1 class="grid-6">Escola de Surf</h1>
+      <h1 class="grid-7">Escola de Surf</h1>
       <div class="form">
-        <form class="grid-6">
+        <form class="grid-5">
           <input type="email" placeholder="E-mail"><button>Matricule-se<img src="img/seta.svg" alt="seta²"></button>
         </form>
       </div>
@@ -62,18 +62,35 @@
   <!-- Fecha Intro -->
 
   <!-- Abre Infos -->
-  <section class="container">
-    <div class="info-mapa grid-6">
+  <section class="info container">
+    <div class="info-mapa grid-7">
       <div class="foto-prancha">
         <img src="img/foto-galeria.jpg" alt="">
       </div>
       <div class="foto-mapa">
         <img src="img/mapa.jpg" alt="">
       </div>
+      <div class="info-local">
+        <h2>Como chegar</h2>
+        <ul>
+          <li><span>Carro</span> pela via Lúcio Costa sentido Barra</li>
+          <li><span>Ônibus</span> linhas 2333, 138, 189 e 170</li>
+          <li><span>Metrô</span> linha azul sentido Zona Sul</li>
+        </ul>
+      </div>
     </div>
 
-    <div class="info-curso grid-6">
-
+    <div class="info-curso grid-5">
+      <h2><span>Aulas</span> em uma das melhores praias do <span>Rio</span>.</h2>
+      <ul class="lista-info">
+        <li class="li-costa"><span>8km de costa</span></li>
+        <li class="li-rest"><span>Restaurantes à beira mar</span></li>
+        <li class="li-vida"><span>Salva-vidas a cada 300m</span></li>
+        <li class="li-p">
+          <p>Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.</p>
+          <p>Como cidade capital, abriga na zona chamada Plateau, promontório à beira-mar, edifícios públicos e outras construções de importância, como o Palácio Presidencial, construído no fim do século XIX para ser a residência do governador português.</p>
+        </li>
+      </ul>
     </div>
   </section>
   <!-- Fecha Infos -->
