--- a/index.html
+++ b/index.html
@@ -94,6 +94,61 @@
     </div>
   </section>
   <!-- Fecha Infos -->
-  
+
+  <!-- Abre Aulas -->
+  <section class="aulas">
+    <h2>Aulas</h2>
+    <div class="container">
+      <div class="grid-4 infantil">
+        <h3>infantil</h3>
+        <ul>
+          <li>Público entre 5 e 15 anos</li>
+          <li>Equipamentos fornecidos</li>
+          <li>Horários de Sex. à Sab.</li>
+          <li>2 horas seguidas de aula</li>
+        </ul>
+        <p class="preco">R$49,00 / Aula</p>
+        <a href="#">Matricule-se<img src="img/seta.svg" alt="seta²"></a>
+      </div>
+
+      <div class="grid-4 adulto">
+        <h3>adulto</h3>
+        <ul>
+          <li>Público entre 16 e 80 anos</li>
+          <li>Equipamentos fornecidos</li>
+          <li>Horários de Sex. à Sab.</li>
+          <li>3 horas seguidas de aula</li>
+        </ul>
+        <p class="preco">R$69,00 / Aula</p>
+        <a href="#">Matricule-se<img src="img/seta.svg" alt="seta²"></a>
+      </div>
+
+      <div class="grid-4 profissional">
+        <h3>profissional</h3>
+        <ul>
+          <li>Experiência de 3 anos no surf</li>
+          <li>Você deve trazer o equipamento</li>
+          <li>Horários de Sex. à Sab.</li>
+          <li>4 horas seguidas de aula</li>
+        </ul>
+        <p class="preco">R$99,00 / Aula</p>
+        <a href="#">Matricule-se<img src="img/seta.svg" alt="seta²"></a>
+      </div>
+    </div>
+
+    <div class="desconto">
+      <p>Possui um grupo com mais de <span class="desconto_pessoa">3 pessoas</span>?</p>
+      <p>Entre <span class="desconto_contato">em contato</span> para um desconto personalizado.</p>
+    </div>
+  </section>
+  <!-- Fecha Aulas -->
+
+  <!-- Abre Quote -->
+  <section class="quote">
+    <p class="fala">“O surf liberta as ondas de uma vida.”</p>
+    <p class="autor">Regis Pereira</p>
+  </section>
+  <!-- Fecha Quote -->
+
 </body>
 </html>
