--- a/index.html
+++ b/index.html
@@ -150,5 +150,58 @@
   </section>
   <!-- Fecha Quote -->
 
+  <!-- Abre Contato -->
+  <section class="contato">
+    <h2>Contato</h2>
+    <div class="container">
+      <div class="grid-7">
+        <div class="form">
+          <form action="">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email">
+            <label for="mensagem">Mensagem</label>
+            <input type="textarea" id="mensagem" name="mensagem">
+            <button>Enviar Mensagem <img src="img/seta.svg" alt="seta"></button>
+          </form>
+        </div>
+      </div>
+      <div class="grid-5">
+        <div class="info_contato">
+          <div class="endereco">
+            <h3>Endereço</h3>
+            <p>Praia Mansa nº 47.</p>
+            <p>Rio de Janeiro - RJ</p>
+            <p>Procure a barraca vermelha</p>
+            <a href="#">ver no mapa<svg width="12" height="12" viewBox="0 0 12 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+              <title>seta</title>
+              <desc>Created using Figma</desc>
+              <g id="Canvas" transform="translate(-319 -2194)">
+              <g id="seta">
+              <use xlink:href="#path0_stroke" transform="translate(320 2195)" fill="#FF3726"/>
+              </g>
+              </g>
+              <defs>
+              <path id="path0_stroke" d="M 0 4C -0.552285 4 -1 4.44772 -1 5C -1 5.55228 -0.552285 6 0 6L 0 4ZM 9.5 5L 10.2071 5.70711C 10.5976 5.31658 10.5976 4.68342 10.2071 4.29289L 9.5 5ZM 5.20711 -0.707107C 4.81658 -1.09763 4.18342 -1.09763 3.79289 -0.707107C 3.40237 -0.316582 3.40237 0.316582 3.79289 0.707107L 5.20711 -0.707107ZM 3.79289 9.29289C 3.40237 9.68342 3.40237 10.3166 3.79289 10.7071C 4.18342 11.0976 4.81658 11.0976 5.20711 10.7071L 3.79289 9.29289ZM 0 6L 9.5 6L 9.5 4L 0 4L 0 6ZM 10.2071 4.29289L 5.20711 -0.707107L 3.79289 0.707107L 8.79289 5.70711L 10.2071 4.29289ZM 8.79289 4.29289L 3.79289 9.29289L 5.20711 10.7071L 10.2071 5.70711L 8.79289 4.29289Z"/>
+              </defs>
+              </svg></a>
+          </div>
+          <div class="email_telefone">
+            <h3>Email & Telefone</h3>
+            <p>contato@surfbot.com</p>
+            <p>21 99999-9999</p>
+          </div>
+          <div class="horario">
+            <h3>Horário</h3>
+            <p>De Sexta à Sábado</p>
+            <p class="horario-p">Das 06:00 às 14:00</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Fecha Contato -->
+
 </body>
 </html>
